GRP-4567: Upgrade Java and Tomcat and remove PSU SCIM (commit 6)